--- a/examples/coordinated.yml
+++ b/examples/coordinated.yml
@@ -1,9 +1,9 @@
 influxdb:
     url: http://localhost:8086
     username: user
-    password: qwerty
+    password: qwerty123456
     org: univaq
     bucket: mape
     token: CAUow6RTwUr5__6YE4MRCAyvxEIcStWcxHZD88d0E5yqbvNjziJ-e0x6BnEWTammct6qzHsak8-n7PKMnoMTaA==
-    internal: yes
+    embed: yes
     debug: false
