--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,18 +20,18 @@ theme:
   name: material
   custom_dir: docs/overrides
   features:
-#     - announce.dismiss
+#    - announce.dismiss
     - content.code.annotate
-#     - content.tabs.link
-#     - content.tooltips # Sponsors only
-#     - header.autohide
-#     - navigation.expand
+#    - content.tabs.link
+#    - content.tooltips # Sponsors only
+#    - header.autohide
+#    - navigation.expand
     - navigation.indexes
-#     - navigation.instant
-#     - navigation.prune
+#    - navigation.instant
+#    - navigation.prune
     - navigation.sections
-#    - navigation.tabs
-#    - navigation.tabs.sticky
+#   - navigation.tabs
+#   - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - search.highlight
@@ -136,7 +136,8 @@ extra_javascript:
 # Page tree
 nav:
   - Home:
-      - Home: index.md
-      - Concepts and Terminology: concepts.md
+    - Home: index.md
+    - Concepts and Terminology: concepts.md
   - Getting started:
-      - Installation: getting-started.md
+    - Installation: getting-started/index.md
+    - First loop: getting-started/first-loop.md
