--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
       type: timeago
+  - glightbox
 
 # Extensions
 markdown_extensions:
@@ -114,6 +115,9 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - pymdownx.snippets:
+        auto_append:
+          - docs/append.md
 
 # Customization
 extra:
@@ -145,4 +149,3 @@ nav:
       - Element: typography.md
       - Graphical notation: typography.md
       - Remote package: typography.md
-      - Configuration: typography.md
