--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ mkdocs = "^1.4.2"
 mkdocs-material = "^8.5.11"
 mkdocs-minify-plugin = "^0.6.2"
 mkdocs-git-revision-date-localized-plugin = "^1.1.0"
+mkdocs-glightbox = "^0.3.1"
 
 [tool.poetry.group.examples.dependencies]
 numpy = "^1.22.0"
