--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ mkdocs-material = "^8.5.11"
 mkdocs-minify-plugin = "^0.6.2"
 mkdocs-git-revision-date-localized-plugin = "^1.1.0"
 mkdocs-glightbox = "^0.3.1"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
 
 [tool.poetry.group.examples.dependencies]
 numpy = "^1.22.0"
